# FractionalRationalFunctions

./: .gitignore  CMakeLists.txt  README  README.md  main.cpp
classes/: Counter.cpp  Counter.h  Function.h  List.cpp  List.h  Polynomial.cpp  Polynomial.h  Pool.cpp  Pool.h  Quotient.cpp  Quotient.h  QuotientOfPolynomials.cpp  QuotientOfPolynomials.h
lib/: c_interface.cpp  c_interface.h
scripts/: decorators.py  script.py
tests/: test_Function.cpp  test_Function.h  test_List.cpp  test_List.h  test_Polynomial.cpp  test_Polynomial.h  test_Pool.cpp  test_Pool.h  test_Quotient.cpp  test_Quotient.h  test_QuotientOfPolynomials.cpp  test_QuotientOfPolynomials.h  test_c_interface.cpp  test_c_interface.h
